<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvBumperType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/bumper_color"
        android:gravity="center_vertical"
        android:onClick="tvBumperTypeClicked"
        android:text="@string/settings_bumper_type" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_screen_position" />

        <TextView
            android:id="@+id/tvScreenPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:onClick="tvScreenPositionClicked"
            android:text="@string/settings_screen_position_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_invert_image" />

        <TextView
            android:id="@+id/tvInvertImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:onClick="tvInvertImageClicked"
            android:text="@string/settings_invert_image_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSlidingWindowManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_sliding_window_management" />

        <TextView
            android:id="@+id/tvBumperDistanceFromTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5dp"/>
        
        <TextView
            android:id="@+id/tvBumperHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <ca.umanitoba.cs.hci.phonebumper.SlidingWindowManager
        android:id="@+id/slmManager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/settings_sliding_window_management"
        android:src="@drawable/sliding_window_management" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_brightness" />

        <SeekBar 
            android:id="@+id/sbBrightness"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="255"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

</LinearLayout>